--- a/css/style.scss
+++ b/css/style.scss
@@ -1,17 +1,23 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,700,900');
+@import url("https://fonts.googleapis.com/css?family=Roboto:100,300,400,700,900");
 
 $white: rgba(255, 255, 255, 1);
 $navBackground: rgba(246, 246, 246, 0);
 $textLight: rgb(54, 54, 54);
 $textDark: rgb(0, 0, 0);
 $bgAbout: rgb(238, 238, 238);
-$bgProjects: radial-gradient(circle, rgba(54,53,53,1) 0%, rgba(27,27,27,1) 100%);
+$bgProjects: radial-gradient(
+  circle,
+  rgba(54, 53, 53, 1) 0%,
+  rgba(27, 27, 27, 1) 100%
+);
 $bgContact: rgb(45, 52, 54);
 $iconSizeLg: 6rem;
 $iconSizeSm: 4rem;
 $accentBlue: rgb(53, 35, 170);
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -20,13 +26,20 @@ $accentBlue: rgb(53, 35, 170);
 }
 
 body {
-  font-family: 'Roboto', 'Helvetica Neue', Helvetica, sans-serif;
+  font-family: "Roboto", "Helvetica Neue", Helvetica, sans-serif;
   font-weight: 400;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(51, 51, 51);
   position: relative;
 }
 
-h1, h2, h3, h4, h5, h6, p, label {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+label {
   color: $textDark;
 }
 
@@ -39,11 +52,14 @@ h1, h2, h3, h4, h5, h6, p, label {
   max-width: 1000px;
 }
 
-a:link, a:visited {
+a:link,
+a:visited {
   color: $textDark;
 }
 
-.about, .projects, .contact {
+.about,
+.projects,
+.contact {
   padding: 3.5rem 0;
 }
 
@@ -72,7 +88,7 @@ a:link, a:visited {
     position: relative;
 
     li {
-      margin: .75rem 2rem;
+      margin: 0.75rem 2rem;
       transition: text-shadow 150ms ease;
       &:hover {
         text-shadow: 0 2px 1px rgba(0, 0, 0, 0.2);
@@ -84,7 +100,8 @@ a:link, a:visited {
   }
 }
 
-.about-title, .about-subtitle {
+.about-title,
+.about-subtitle {
   color: $textDark;
 }
 
@@ -130,7 +147,7 @@ a:link, a:visited {
 }
 
 .fa-css3-alt {
-  color: #0074D9;
+  color: #0074d9;
 }
 
 .fa-code {
@@ -152,50 +169,65 @@ a:link, a:visited {
   margin: 0 auto 1rem;
 }
 
-.javascript, .express, .ruby, .postgresql, .aws, .slack, .jquery, .npm, .aws, .git {
+.javascript,
+.express,
+.ruby,
+.postgresql,
+.aws,
+.slack,
+.jquery,
+.npm,
+.aws,
+.git {
   @extend %icon;
-  background: center / contain no-repeat url('../img/express.svg');
+  background: center / contain no-repeat url("../img/express.svg");
 }
 
-.fa-node, .fa-npm {
-  color: rgb(144,198,61);
+.fa-node,
+.fa-npm {
+  color: rgb(144, 198, 61);
 }
 
 .javascript {
-  background: center / cover no-repeat url('https://cdn.svgporn.com/logos/javascript.svg');
+  background: center / cover no-repeat
+    url("https://cdn.svgporn.com/logos/javascript.svg");
   border-radius: 10px;
 }
 
 .npm {
-  background: center / contain no-repeat url('https://cdn.svgporn.com/logos/npm.svg');
+  background: center / contain no-repeat
+    url("https://cdn.svgporn.com/logos/npm.svg");
 }
 
 .postgresql {
-  background: center / cover no-repeat url('https://cdn.svgporn.com/logos/postgresql.svg');
+  background: center / cover no-repeat
+    url("https://cdn.svgporn.com/logos/postgresql.svg");
 }
 
 .ruby {
-  background: center / cover no-repeat url('../img/ruby.svg');
+  background: center / cover no-repeat url("../img/ruby.svg");
 }
 
 .aws {
-  background: center / contain no-repeat url('../img/aws.svg');
+  background: center / contain no-repeat url("../img/aws.svg");
 }
 
 .git {
-  background: center / cover no-repeat url('https://cdn.svgporn.com/logos/git-icon.svg');
+  background: center / cover no-repeat
+    url("https://cdn.svgporn.com/logos/git-icon.svg");
 }
 
 .slack {
-  background: center / contain no-repeat url('https://cdn.svgporn.com/logos/slack-icon.svg');
+  background: center / contain no-repeat
+    url("https://cdn.svgporn.com/logos/slack-icon.svg");
 }
 
 .jquery {
-  background: center / contain no-repeat url('../img/jquery.svg');
+  background: center / contain no-repeat url("../img/jquery.svg");
 }
 
 i {
-  margin-bottom: .75rem;
+  margin-bottom: 0.75rem;
   transition: transform 100ms ease-out;
   user-select: none;
 }
@@ -213,8 +245,20 @@ i {
   padding: 3rem 0 1rem;
 }
 
-.projects h2, .projects p {
+.projects h2,
+.projects p {
   color: rgba(255, 255, 255, 1);
+}
+
+.row,
+.about {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 300ms ease-in, transform 200ms ease-in-out;
+  &.in-view {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .row {
@@ -260,7 +304,7 @@ i {
 .live-site {
   background: $white;
   color: black;
-  padding: .4rem;
+  padding: 0.4rem;
   border-radius: 3px;
   transition: 250ms ease;
   cursor: pointer;
@@ -273,7 +317,8 @@ i {
 
 /* Contact */
 .contact {
-  background: center / cover no-repeat url("https://images.pexels.com/photos/1166643/pexels-photo-1166643.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+  background: center / cover no-repeat
+    url("https://images.pexels.com/photos/1166643/pexels-photo-1166643.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.25);
   min-height: calc(100vh - 72px);
   display: flex;
@@ -284,17 +329,20 @@ i {
   }
 }
 
-    /* FORM */
+/* FORM */
 form {
   width: 350px;
   max-width: 90%;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  padding: 0 .5rem;
+  padding: 0 0.5rem;
 }
 
-.name-input, .email-input, .message-input, .submit-btn {
+.name-input,
+.email-input,
+.message-input,
+.submit-btn {
   border-radius: 5px;
   font-family: inherit;
   font-size: 1rem;
@@ -312,7 +360,7 @@ form {
 .message-input {
   min-height: 150px;
 }
-    /* Submit Button */
+/* Submit Button */
 .submit-btn {
   color: black;
   border: none;
@@ -331,7 +379,6 @@ form {
     background: #222;
   }
 }
-
 
 /* Footer */
 
@@ -359,11 +406,12 @@ footer {
   h6 {
     border-top: 1px solid rgba(255, 255, 255, 0.35);
   }
-  p, h6 {
+  p,
+  h6 {
     color: $white;
     font-weight: 400;
     opacity: 0.5;
-    font-size: .8rem;
+    font-size: 0.8rem;
     padding: 1rem 0;
     transition: opacity 200ms ease;
     max-width: 800px;
@@ -394,7 +442,8 @@ footer {
     &:hover {
       background: rgba(255, 255, 255, 0.96) !important;
 
-      .logo, .nav-item a {
+      .logo,
+      .nav-item a {
         color: black !important;
       }
     }
@@ -427,11 +476,11 @@ footer {
         &::before {
           background: $textDark;
           background: $accentBlue;
-          content: '';
+          content: "";
           display: block;
           height: 3px;
           position: absolute;
-          top: -.5rem;
+          top: -0.5rem;
           left: 0;
           right: 0;
           opacity: 0;
@@ -473,10 +522,15 @@ footer {
 
   .about {
     position: relative;
-  
+
     &::before {
-      content: '';
-      background: black radial-gradient(circle at bottom right, $accentBlue, rgba(53, 35, 170, 0.7));
+      content: "";
+      background: black
+        radial-gradient(
+          circle at bottom right,
+          $accentBlue,
+          rgba(53, 35, 170, 0.7)
+        );
       clip-path: polygon(0 0, 100% 0, 0 100%);
       width: 70vw;
       height: 125px;
@@ -486,8 +540,13 @@ footer {
     }
 
     &::after {
-      content: '';
-      background: black radial-gradient(circle at bottom right, $accentBlue, rgba(53, 35, 170, 0.7));
+      content: "";
+      background: black
+        radial-gradient(
+          circle at bottom right,
+          $accentBlue,
+          rgba(53, 35, 170, 0.7)
+        );
       clip-path: polygon(100% 0, 0% 100%, 100% 100%);
       width: 70vw;
       height: 125px;
@@ -509,7 +568,7 @@ footer {
           opacity: 1;
         }
       }
-    } 
+    }
   }
 
   .icon-size {
@@ -533,7 +592,7 @@ footer {
 
   .row {
     margin: 0;
-    
+
     a {
       color: black;
     }
@@ -563,7 +622,7 @@ footer {
   }
 
   .gallery header:hover .project-links {
-    background-image: linear-gradient(180deg, transparent, rgba(0, 0, 0, .85));
+    background-image: linear-gradient(180deg, transparent, rgba(0, 0, 0, 0.85));
     opacity: 1;
   }
 
@@ -591,12 +650,11 @@ footer {
 //   }
 // }
 
-
 @keyframes slide-in {
   0% {
     opacity: 0;
     margin-left: -30rem;
-  } 
+  }
   100% {
     opacity: 1;
     margin-left: 2rem;
