--- a/css/style.scss
+++ b/css/style.scss
@@ -251,7 +251,7 @@ i {
 }
 
 .row,
-.about {
+.icon-size {
   opacity: 0;
   transform: translateY(50px);
   transition: opacity 300ms ease-in, transform 200ms ease-in-out;
